--- a/src/img-storage-vm/img-storage-client.service
+++ b/src/img-storage-vm/img-storage-client.service
@@ -3,9 +3,12 @@ Description=Image Storage Client Service
 After=network.service
 
 [Service]
-Type=Daemon
+Type=idle
 ExecStart=/opt/rocks/bin/img-storage-vm start
 ExecStop=/opt/rocks/bin/img-storage-vm stop
+Restart=on-abort
+TimeoutStartSec=10
+RestartSec=10
 
 [Install]
 WantedBy=multi-user.target
